[tool.poetry]
name = "ecg-service"
version = "0.1.0"
description = ""
authors = ["spark71 <noxdrummer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
torch = "^2.2.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
