[tool.poetry]
name = "ecg-service"
version = "0.1.0"
description = ""
authors = ["spark71 <noxdrummer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "3.7.4"
torch = "^2.2.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.20.0"
pydantic = "^2.6.2"
panel = "^1.3.8"
h5py = "^3.10.0"
python-dotenv = "^1.0.1"
peakutils = "^1.3.4"
seaborn = "^0.13.2"
wfdb = "^4.1.2"
plotly = "^5.20.0"
alembic = "^1.13.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
