[tool.poetry]
name = "ecg-service"
version = "0.1.0"
description = ""
authors = ["spark71 <noxdrummer@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "3.7.4"
torch = "^2.2.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.20.0"
pydantic = "^2.6.2"
panel = "^1.3.8"
h5py = "^3.10.0"
python-dotenv = "^1.0.1"
peakutils = "^1.3.4"
seaborn = "^0.13.2"
wfdb = "3.2.0"
plotly = "^5.20.0"
alembic = "^1.13.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
missingno = "^0.5.2"
tqdm = "^4.66.2"
bs4 = "^0.0.2"
nltk = "^3.8.1"
spacy = "^3.7.4"
fake2db = "^0.5.4"
hrv-analysis = "^1.0.4"
awsebcli = "^3.20.10"
fastai = "^2.7.15"
albumentations = "^1.4.4"
nnaudio = "^0.3.3"
heartpy = "^1.2.7"
timm = "^0.9.16"
dash = "^2.17.0"
streamlit = "^1.34.0"
hvplot = "^0.9.2"
jupyter-bokeh = "^4.0.4"
pygwalker = "^0.4.8.1"
astropy = "^6.1.0"
torchviz = "^0.0.2"
hiddenlayer = "^0.3"
torchvision = "^0.18.0"
graphviz = "^0.20.3"
torchview = "^0.2.6"
ipykernel = "^6.29.4"
notebook = "^7.1.3"
chardet = "^5.2.0"
neurokit2 = "^0.2.7"
torchcam = "^0.4.0"
pytorch-gradcam = "^0.2.1"
torch-ecg = "^0.0.28"
julius = "^0.2.7"
altair-saver = "^0.5.0"
cairosvg = "^2.7.1"
cairocffi = "^1.7.0"
grad-cam = "^1.5.0"
pdfkit = "^1.0.0"
wkhtmltopdf = "^0.2"
altair-viewer = "^0.4.0"
altair = "^5.3.0"
vl-convert-python = "^1.4.0"
tensorflow = "^2.16.1"
lightgbm = "^4.3.0"
imblearn = "^0.0"
keras = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
